triton_backend_sys/src/bindings.rs

extern "C" {
    #[doc = " Set the timeout for a request, in microseconds. The default is 0\n which indicates that the request has no timeout.\n\n \\param inference_request The request object.\n \\param timeout_us The timeout, in microseconds.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestSetTimeoutMicroseconds(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        timeout_us: u64,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Add an input to a request.\n\n \\param inference_request The request object.\n \\param name The name of the input.\n \\param datatype The type of the input. Valid type names are BOOL,\n UINT8, UINT16, UINT32, UINT64, INT8, INT16, INT32, INT64, FP16,\n FP32, FP64, and BYTES.\n \\param shape The shape of the input.\n \\param dim_count The number of dimensions of 'shape'.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestAddInput(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        name: *const ::std::os::raw::c_char,
        datatype: TRITONSERVER_DataType,
        shape: *const i64,
        dim_count: u64,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Add a raw input to a request. The name recognized by the model, data type\n and shape of the input will be deduced from model configuration.\n This function must be called at most once on request with no other input to\n ensure the deduction is accurate.\n\n \\param inference_request The request object.\n \\param name The name of the input. This name is only used as a reference\n of the raw input in other Tritonserver APIs. It doesn't assoicate with the\n name used in the model.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestAddRawInput(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        name: *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Remove an input from a request.\n\n \\param inference_request The request object.\n \\param name The name of the input.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestRemoveInput(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        name: *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Remove all inputs from a request.\n\n \\param inference_request The request object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestRemoveAllInputs(
        inference_request: *mut TRITONSERVER_InferenceRequest,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Assign a buffer of data to an input. The buffer will be appended\n to any existing buffers for that input. The 'inference_request'\n object takes ownership of the buffer and so the caller should not\n modify or free the buffer until that ownership is released by\n 'inference_request' being deleted or by the input being removed\n from 'inference_request'.\n\n \\param inference_request The request object.\n \\param name The name of the input.\n \\param base The base address of the input data.\n \\param byte_size The size, in bytes, of the input data.\n \\param memory_type The memory type of the input data.\n \\param memory_type_id The memory type id of the input data.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestAppendInputData(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        name: *const ::std::os::raw::c_char,
        base: *const ::std::os::raw::c_void,
        byte_size: usize,
        memory_type: TRITONSERVER_MemoryType,
        memory_type_id: i64,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Assign a buffer of data to an input for execution on all model instances\n with the specified host policy. The buffer will be appended to any existing\n buffers for that input on all devices with this host policy. The\n 'inference_request' object takes ownership of the buffer and so the caller\n should not modify or free the buffer until that ownership is released by\n 'inference_request' being deleted or by the input being removed from\n 'inference_request'. If the execution is scheduled on a device that does not\n have a input buffer specified using this function, then the input buffer\n specified with TRITONSERVER_InferenceRequestAppendInputData will be used so\n a non-host policy specific version of data must be added using that API.\n \\param inference_request The request object.\n \\param name The name of the input.\n \\param base The base address of the input data.\n \\param byte_size The size, in bytes, of the input data.\n \\param memory_type The memory type of the input data.\n \\param memory_type_id The memory type id of the input data.\n \\param host_policy_name All model instances executing with this host_policy\n will use this input buffer for execution.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestAppendInputDataWithHostPolicy(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        name: *const ::std::os::raw::c_char,
        base: *const ::std::os::raw::c_void,
        byte_size: usize,
        memory_type: TRITONSERVER_MemoryType,
        memory_type_id: i64,
        host_policy_name: *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Assign a buffer of data to an input. The buffer will be appended\n to any existing buffers for that input. The 'inference_request'\n object takes ownership of the buffer and so the caller should not\n modify or free the buffer until that ownership is released by\n 'inference_request' being deleted or by the input being removed\n from 'inference_request'.\n\n \\param inference_request The request object.\n \\param name The name of the input.\n \\param base The base address of the input data.\n \\param buffer_attributes The buffer attrubutes of the input.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestAppendInputDataWithBufferAttributes(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        name: *const ::std::os::raw::c_char,
        base: *const ::std::os::raw::c_void,
        buffer_attributes: *mut TRITONSERVER_BufferAttributes,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Clear all input data from an input, releasing ownership of the\n buffer(s) that were appended to the input with\n TRITONSERVER_InferenceRequestAppendInputData or\n TRITONSERVER_InferenceRequestAppendInputDataWithHostPolicy\n \\param inference_request The request object.\n \\param name The name of the input."]
    pub fn TRITONSERVER_InferenceRequestRemoveAllInputData(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        name: *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Add an output request to an inference request.\n\n \\param inference_request The request object.\n \\param name The name of the output.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestAddRequestedOutput(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        name: *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Remove an output request from an inference request.\n\n \\param inference_request The request object.\n \\param name The name of the output.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestRemoveRequestedOutput(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        name: *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Remove all output requests from an inference request.\n\n \\param inference_request The request object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestRemoveAllRequestedOutputs(
        inference_request: *mut TRITONSERVER_InferenceRequest,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the release callback for an inference request. The release\n callback is called by Triton to return ownership of the request\n object.\n\n \\param inference_request The request object.\n \\param request_release_fn The function called to return ownership\n of the 'inference_request' object.\n \\param request_release_userp User-provided pointer that is\n delivered to the 'request_release_fn' callback.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestSetReleaseCallback(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        request_release_fn: TRITONSERVER_InferenceRequestReleaseFn_t,
        request_release_userp: *mut ::std::os::raw::c_void,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the allocator and response callback for an inference\n request. The allocator is used to allocate buffers for any output\n tensors included in responses that are produced for this\n request. The response callback is called to return response\n objects representing responses produced for this request.\n\n \\param inference_request The request object.\n \\param response_allocator The TRITONSERVER_ResponseAllocator to use\n to allocate buffers to hold inference results.\n \\param response_allocator_userp User-provided pointer that is\n delivered to the response allocator's start and allocation functions.\n \\param response_fn The function called to deliver an inference\n response for this request.\n \\param response_userp User-provided pointer that is delivered to\n the 'response_fn' callback.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestSetResponseCallback(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        response_allocator: *mut TRITONSERVER_ResponseAllocator,
        response_allocator_userp: *mut ::std::os::raw::c_void,
        response_fn: TRITONSERVER_InferenceResponseCompleteFn_t,
        response_userp: *mut ::std::os::raw::c_void,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Delete an inference response object.\n\n \\param inference_response The response object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceResponseDelete(
        inference_response: *mut TRITONSERVER_InferenceResponse,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Return the error status of an inference response. Return a\n TRITONSERVER_Error object on failure, return nullptr on success.\n The returned error object is owned by 'inference_response' and so\n should not be deleted by the caller.\n\n \\param inference_response The response object.\n \\return a TRITONSERVER_Error indicating the success or failure\n status of the response."]
    pub fn TRITONSERVER_InferenceResponseError(
        inference_response: *mut TRITONSERVER_InferenceResponse,
    ) -> *mut TRITONSERVER_Error;
}
